--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -14,6 +14,10 @@
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.1);
 }
 
+html[data-theme='light'] .navbar .navbar__logo {
+  filter: invert(100%);
+}
+
 /* Dark Theme */
 [data-theme='dark'] {
   --ifm-color-primary: #547eff; /* primary in dark base */
@@ -29,8 +33,8 @@
 }
 
 html[data-theme='dark'] {
-  --ifm-background-color: #1a171b; /* base-100 in dark base */
-  --ifm-background-surface-color: #1a171b; /* base-200 in dark base */
+  --ifm-background-color: #0d0c0d; /* base-100 in dark base */
+  --ifm-background-surface-color: #0d0c0d; /* base-200 in dark base */
   --ifm-navbar-shadow: 0;
 }
 
